@@ -309,6 +309,7 @@ TESTS =						\
   dd/skip-seek2					\
   dd/skip-seek-past-file			\
   dd/stderr					\
+  dd/unblock					\
   dd/unblock-sync				\
   df/total-verify				\
   du/2g						\
